--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
-    "react-transition-group": "^1.2.0"
+    "react-transition-group": "^1.2.0",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
